Prod-EU/force-app/main/default/objects/Account_Token__c/Account_Token__c.object-meta.xml
<CustomObject>
    <description>This Object will help to store the token and 6-digits code to authenticate Customer and create Account Linkage.</description>
    <label>Account Token</label>
    <nameField>
        <displayFormat>Token-{00000}</displayFormat>
        <label>AccountToken</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>