Prod-EU/force-app/main/default/objects/Account_Token__c/fields/Dexcom_Account__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_Account__c</fullName>
    <description>This Custom Field will store Dexcom Account GUID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dexcom Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>