Prod-EU/force-app/main/default/objects/Account_Token__c/fields/Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time__c</fullName>
    <description>This field will determine the validity of the Token or Verification Code submitted by customer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Time</label>
    <type>DateTime</type>
</CustomField>