Prod-EU/force-app/main/default/objects/Account_Token__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>This custom field will store the token generated to authenticate Customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>