Prod-EU/force-app/main/default/objects/Account_Token__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <description>This custom field will store the verification code generated to authenticate Customer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>